// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
var a: string = 0;
module.exports = a;

=====================================output=====================================
// @flow
var a: string = 0;
module.exports = a;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
var a = require('./a');
var b: number = a;
module.exports = b;

=====================================output=====================================
// @flow
var a = require("./a");
var b: number = a;
module.exports = b;

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
var b = require('./b');
var c: string = b;
module.exports = c;

=====================================output=====================================
// @flow
var b = require("./b");
var c: string = b;
module.exports = c;

================================================================================
`;
